# mcp-client

./: pyproject.toml
src/mcp_client/: client.py
