[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francisco Filho", email = "francisco@capimgrosso.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.4",
]

[project.scripts]
mcp-client = "mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
